--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
     </div>
 
     <div class="container">
-        <img src="https://yt3.googleusercontent.com/kIW6RzLeZKNNPKSdTShkDsli_QJG7UwKNjkJw6KEuzqy9-hKS01PAFmj0rDs9BuLYLmyRMFQ=s900-c-k-c0x00ffffff-no-rj" class="profile-img">
+        <img src="https://media.licdn.com/dms/image/v2/D560BAQGeSiXp4KdKwg/company-logo_200_200/B56ZjQoGBWHAAY-/0/1755846828579/multirasa_prima_logo?e=2147483647&v=beta&t=w2VTPGbzwIzc7m8yGraKboym2wrv3iYfrVVBT5IMdng" class="profile-img">
         
         <h1>BSGA</h1>
         <p class="bio">Silahkan pilih Form sesuai kebutuhan</p>
@@ -238,4 +238,5 @@
         }, 3500);
     </script>
 </body>
+
 </html>
